<resources>
    <string name="app_name">Admin Chef</string>
    <string name="chef">Chef</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="login">Login</string>
    <string name="dd">Login To Your\nAdmin Dashboard</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="continue_with">Continue With</string>
    <string name="don_t_have_account">Don’t Have Account?</string>
    <string name="sign_up_nadmin_dashboard">Sign Up\nAdmin Dashboard</string>
    <string name="your_location">Your Location</string>
    <string name="location">location</string>
    <string name="name_of_owner">Name of Owner</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="create_account">Create Account</string>
    <string name="pending_order">Pending Order</string>
    <string name="_30">50</string>
    <string name="complete_norder">Complete\nOrder</string>
    <string name="whole_time_earning">Earning</string>
    <string name="_100">100$</string>
    <string name="add_item">Add Item</string>
    <string name="add_all_item">Add All Item</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="profile">Admin Profile</string>
    <string name="money_on_holed">Money On Holed</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_user">Create New User</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="food_description">Food Description:</string>
    <string name="description">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit,\nsed do eiusmod tempor incididunt\nut labore et dolore magna aliqua.\n Ut enim ad </string>
    <string name="components">Components:</string>
    <string name="desc">Noddle\nSalad\nBurger\nHerbal Pan Cake\nMomos</string>
    <string name="select_image">Select Image</string>
    <string name="all_item">All Item</string>
    <string name="out_of_delivery">Out of Delivery</string>
    <string name="customer_name">Customer Name</string>
    <string name="payment">Payment</string>
    <string name="not_received">Not Received</string>
    <string name="delivery">Delivery</string>
    <string name="feedback_customer">Customer Feedbacks</string>
    <string name="feedback">I had a positive experience, but I believe there are a few areas that could be improved to elevate the dining experience even further.</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save_information">Save Information</string>
    <string name="edit_your_information">Edit your information</string>
    <string name="name_customer">Name Customer</string>
    <string name="quantity">Quantity:</string>
    <string name="_0">0</string>
    <string name="accept">Accept</string>
    <string name="pending_orders">Pending Orders</string>
</resources>