<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageFoodCard"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageFood"
                    android:src="@drawable/menu1"
                    android:importantForAccessibility="no" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/Name_Customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/name_customer"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/imageFoodCard"
                app:layout_constraintTop_toTopOf="@id/imageFoodCard" />

            <TextView
                android:id="@+id/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="4dp"
                android:text="@string/quantity"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/imageFoodCard"
                app:layout_constraintStart_toEndOf="@id/imageFoodCard" />

            <TextView
                android:id="@+id/numbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="4dp"
                android:text="@string/_0"
                android:textColor="@color/red"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/Quantity"
                app:layout_constraintStart_toEndOf="@id/Quantity"
                app:layout_constraintTop_toTopOf="@id/Quantity" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acceptButton"
                android:layout_width="81dp"
                android:layout_height="48dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ed_red"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/Quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/Name_Customer" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>